File Reading from different file formats

--- a/Print statement.ipynb
+++ b/Print statement.ipynb
@@ -12,13 +12,237 @@
      "inputWidgets": {},
      "nuid": "009658ba-751d-4920-854c-aa07333fe6cc",
      "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1763041778322}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print('Hello World')\n",
+    "\n",
+    "\n",
+    "\n",
+    "dfr=spark.read\n",
+    "df=dfr.csv(path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/user_dataset/users_001.csv\", header=True, inferSchema=True)\n",
+    "print(type(df))\n",
+    "df.printSchema()\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b349721c-569d-4a00-9a40-eb0393ffd8c0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Create dataframe from custom Delimeter\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "849662f7-a391-4e72-8e6a-8401ded6d159",
+     "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "outputs": [],
    "source": [
-    "print('Hello World')"
+    "\n",
+    "dfr=spark.read\n",
+    "df=dfr.csv(path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/sample_dataset/users_001.dat\", header=True, inferSchema=True,sep=\"|\")\n",
+    "print(type(df))\n",
+    "df.printSchema()\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "c7b65111-00f7-424c-91c8-d45d8b9ef082",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Create a dataframe from JSON\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4957d7dc-95ce-408a-8c9d-8e0f546492db",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.read.json(path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/sample_dataset/users_001.json\" ).display()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2779cb53-2d68-4456-af8e-784a09d8b698",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.read.json(path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/sample_dataset/users_002.json\", multiLine=True).display()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "bab9b51a-e6ea-4432-b6ec-8fd622959a8b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.read.json(path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/sample_dataset/users_004.json\", multiLine=True).display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "71cb1c7d-6ff1-4961-93be-9816f104d93d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.read.parquet(\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/sample_dataset/users.parquet\").display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0837990c-f5ab-4547-862f-ef4e0e545ec1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Creating dataframe from Cloud Storage\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b704487a-c1ae-41ad-93ca-5114cc04fb6d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##Using access KEys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8cedb34b-847e-4072-a871-a9c8adb7030e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.types import *\n",
+    "CUSTOM_SCHEMA = StructType([\n",
+    "StructField(\"id\", IntegerType()),\n",
+    "StructField(\"age\", IntegerType()),\n",
+    "StructField(\"gen\", StringType()),\n",
+    "StructField(\"desig\", StringType()),\n",
+    "StructField(\"salary\", IntegerType()),\n",
+    "\n",
+    "])\n",
+    "\n",
+    "spark.read.csv(path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/sample_dataset/users_001.csv\",\n",
+    "header=True,\n",
+    "schema=CUSTOM_SCHEMA).display()"
    ]
   }
  ],
