15th Nov,, SQL operations DML

--- a/Exploring Data Source API.ipynb
+++ b/Exploring Data Source API.ipynb
@@ -244,6 +244,183 @@
     "header=True,\n",
     "schema=CUSTOM_SCHEMA).display()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f2e743e0-b94a-49df-9b1a-0bd7a919a069",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.read.option(\"ColumnNameOfCorruptRecord\",\"Bad_Record\").json(path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/access_logs.json\",  mode=\"PERMISSIVE\").display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "49b8a75c-5695-461f-b404-6fbf5df97a8b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.read.option(\"ColumnNameOfCorruptRecord\",\"Bad_Record\").json(path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/access_logs.json\",  mode=\"PERMISSIVE\").display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a11127b9-0a65-4a22-809d-edc9785591e2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.read.option(\"ColumnNameOfCorruptRecord\",\"Bad_Record\").json(path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/access_logs.json\",  mode=\"DROPMALFORMED\").display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "146ec9c7-f8b3-4d3d-9bc2-6a64443d3e79",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.read.option(\"ColumnNameOfCorruptRecord\",\"Bad_Record\").json(path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/access_logs.json\",  mode=\"FAILFAST\").display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "67a52566-1bd8-496d-8d82-3234e3bdcb09",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = spark.read.csv(\n",
+    "path=\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/dataset/sample_dataset/users_001.csv\",\n",
+    "header=True,\n",
+    "inferSchema=True\n",
+    "\n",
+    ")\n",
+    "\n",
+    "df.write.format(\"json\").save(\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_json new1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9c9bfe1e-a7fc-45ac-bd9f-d701dfcf7bcd",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pyarrow.parquet as pq\n",
+    "user_table=pq.read_table(\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_parquet new/part-00000-tid-1384455253089423838-74275908-de99-43f2-90d9-c1895eb7c01b-136-1.c000.snappy.parquet\")\n",
+    "\n",
+    "user_table.to_pandas().head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ab09eac3-9228-4b69-a049-4ad5d785a9ce",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df=spark.read.parquet(\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_parquet new\")\n",
+    "df.write.format(\"parquet\").save(\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_parquet new\", mode=\"overwrite\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "23457b2c-f531-4033-a711-a40a5111af19",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "df.write.format(\"parquet\").save(\"/Volumes/quickstart_catalog/quickstart_schema/sandbox/output_parquet new\", mode=\"append\")"
+   ]
   }
  ],
  "metadata": {
@@ -259,7 +436,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "Print statement",
+   "notebookName": "Exploring Data Source API",
    "widgets": {}
   },
   "language_info": {
